--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Marcin Kulisz (kuLa) <debian@kulisz.net>
 Uploaders: David Watson <dwatson@debian.org>
-Build-Depends: python3, debhelper (>= 9)
+Build-Depends: python3, python3-pip, debhelper (>= 9)
 Standards-Version: 3.9.6
 X-Python-Version: >= 3.0
 Homepage: https://github.com/Kurento/apt-transport-s3-kurento
