--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Vcs-Browser: https://github.com/Kurento/apt-transport-s3-kurento
 Package: apt-transport-s3-kurento
 Architecture: all
 Conflicts: apt-transport-s3
-Depends: ${misc:Depends}, ${python:Depends}, apt, python-configobj, python3-pip
+Depends: ${misc:Depends}, ${python:Depends}, apt, python3-configobj, python3-pip
 Description: APT transport for privately held AWS S3 repositories
  This package contains the APT AWS S3 transport. It makes possible to fetch
  files from repositories privately held on AWS S3.
